# sentinel

./: Cargo.toml  LICENSE  README.md  flake.nix  sentinel.policy.toml.example
docs/: SECURITY.md  STATE.md
legacy/: 99-firewalld-reload  dev-strategy-and-file-structure  sentinel-preinstall-instructions-deprecated
legacy/boot-check-service/: boot-check.md  sentinel-boot-check.service
legacy/cli-wrapper/: sentinelctl
legacy/drafts/: firewall-dispatcher-99-firewalld-reload-rough.sh  firewall-dispatcher-99-firewalld-reload-second-draft.sh  firewall-sentinel-99-firewalld-reload-draft.sh
legacy/logrotate.d/: sentinel  sentinel.md
nix/: module.nix
src/: app.rs  cli.rs  cmd.rs  config.rs  lib.rs  main.rs  status.rs
src/backends/: firewalld.rs  mod.rs  nftables.rs
