[package]
name = "sentinelctl"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Sentinel: policy validation + status reporting (pluggable firewalld/nftables backends)"

[dependencies]
anyhow = "1"
thiserror = "1"

clap = { version = "4.5", features = ["derive"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

chrono = { version = "0.4", features = ["serde", "clock"] }
directories = "5"

tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "process", "time"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

async-trait = "0.1"
similar = "2"
